--- a/style.css
+++ b/style.css
@@ -3,5 +3,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #2c3e50;
-  margin-top: 60px;
+  max-width: 640px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 16px;
 }
